force-app/main/default/objects/Campaign/fields/FIN_BuildDate__c.field-meta.xml
<CustomField>
    <fullName>FIN_BuildDate__c</fullName>
    <label>Build Date</label>
    <type>Date</type>
</CustomField>