force-app/main/default/objects/Campaign/fields/FIN_EventID__c.field-meta.xml
<CustomField>
    <fullName>FIN_EventID__c</fullName>
    <externalId>true</externalId>
    <label>Event ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>