force-app/main/default/objects/Campaign/fields/FIN_LookupCode__c.field-meta.xml
<CustomField>
    <fullName>FIN_LookupCode__c</fullName>
    <externalId>true</externalId>
    <label>Lookup Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>