force-app/main/default/objects/Campaign/fields/FIN_StartEndDate__c.field-meta.xml
<CustomField>
    <fullName>FIN_StartEndDate__c</fullName>
    <formula>TEXT(MONTH(StartDate))+&quot;/&quot; +TEXT(DAY(StartDate))+&quot;/&quot; +TEXT(YEAR(StartDate))+ &apos; - &apos; + 
TEXT(MONTH(EndDate))+&quot;/&quot; +TEXT(DAY(EndDate))+&quot;/&quot; +TEXT(YEAR(EndDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start End Date</label>
    <type>Text</type>
</CustomField>