force-app/main/default/objects/Campaign/fields/FIN_Venue__c.field-meta.xml
<CustomField>
    <fullName>FIN_Venue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Venue</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Venue</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Event</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>