force-app/main/default/objects/Campaign/recordTypes/FIN_US_Event.recordType-meta.xml
<RecordType>
    <fullName>FIN_US_Event</fullName>
    <active>true</active>
    <label>US Event</label>
</RecordType>