force-app/main/default/objects/Campaign/recordTypes/SWE_Event.recordType-meta.xml
<RecordType>
    <fullName>SWE_Event</fullName>
    <active>true</active>
    <label>SWE Event</label>
</RecordType>