force-app/main/default/objects/Campaign/recordTypes/UK_Event.recordType-meta.xml
<RecordType>
    <fullName>UK_Event</fullName>
    <active>true</active>
    <label>UK Event</label>
</RecordType>