force-app/main/default/objects/Campaign/listViews/All_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>FIN_EventID__c</columns>
    <columns>CAMPAIGN.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Campaigns</label>
</ListView>