force-app/main/default/objects/Campaign/listViews/VBI220920_Event_Lookup.listView-meta.xml
<ListView>
    <fullName>VBI220920_Event_Lookup</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <filterScope>Mine</filterScope>
    <label>VBI220920</label>
</ListView>